# backend/src/modules/telegram/dto/token-data.input.dto.ts
@@ -1,0 +1,9 @@
+import { TelegramUserEnum } from "./telegram-user.enum";
+
+export class TokenDataInputDto {
+	token: string;
+	expired_at: Date;
+	teacher_id: number | null;
+	student_id: number | null;
+	type: TelegramUserEnum;
+}
